<resources>
    <string name="app_name">"Find And Go"</string>
    <string name="action_settings">Configuración</string>
    <string name="sRegistrar">Registrar</string>
    <string name="sCancelar">Cancelar</string>
    <string name="sAceptar">Aceptar</string>
    <string name="sActualizar">Actualizar</string>
    <string name="sEnviar">Entrar</string>
    <string name="sSalir">Salir</string>
    <string name="sVacio">Vacio</string>
    <string name="sGET">GET</string>
    <string name="sRepetir">Todos los días</string>
    <string name="iCero">0</string>
    <string name="sValidar">Validando datos, por favor espere...</string>
    <string name="sEmail">Email</string>
    <string name="sEmailHint">Introduzca su email</string>
    <string name="sPassword">Contraseña: </string>
    <string name="spassword">Contraseña</string>
    <string name="sPasswordHint">Introduzca su contraseña</string>
    <string name="sUsuarioNuevo">Registrar</string>
    <string name="sOlvidoPassword">Olvidé la contraseña</string>
    <string name="sUrlLogin">"http://gooutapp.morethandev.es/php/login.php"</string>
    <string name="sUrlLoginFacebook">"http://gooutapp.morethandev.es/php/loginFacebook.php"</string>
    <string name="sUrlLoginApiExterna">"http://gooutapp.morethandev.es/php/loginApiExterna.php"</string>
    <string name="sNombreUsuario">nombreUsuario</string>
    <string name="sUrlInformePenalizados">"http://gooutapp.morethandev.es/php/selectInformePenalizados.php"</string>
    <string name="facebook_app_id">1441438812573798</string>
    <string name="sAsistenteInformacion">Este perfil está destinado para aquellas personas que deseen asistir a eventos</string>
    <string name="sArtistaInformacion">Este perfil está destinado a aquell@s artistas que deseen publicitar sus eventos</string>
    <string name="sEmpresaInformacion">Este perfil está destinado a aquell@s empresas que deseen publicitar sus eventos</string>
    <string name="sSeleccionaAsistente">Accediendo al formulario de asistentes...</string>
    <string name="sSeleccionaArtista">Accediendo al formulario de artistas...</string>
    <string name="sSeleccionaEmpresa">Accediendo al formulario de empresas...</string>
    <string name="sBienvenido">Bienvenid@</string>
    <string name="sEstado">Estado</string>
    <string name="estado">estado</string>
    <string name="sIdUsuario">idUsuario</string>
    <string name="s_IdUsuario">sIdUsuario</string>
    <string name="sDescripcion">Descripción</string>
    <string name="sDescripcionHint">Puede introducir hasta 120 caracteres</string>
    <string name="sWeb">Web</string>
    <string name="sWebHint">Puede introducir su página web</string>
    <string name="sNombreHint">Introduzca su nombre de usuario</string>
    <string name="sUsuarioAsistente">Nuevo asistente</string>
    <string name="sAsistente">Asistente</string>
    <string name="sArtista">Artista</string>
    <string name="sUsuarioArtista">Nuevo artista</string>
    <string name="sEmpresa">Empresa</string>
    <string name="sUsuarioEmpresa">Nueva empresa</string>
    <string name="sCalle">Dirección</string>
    <string name="sNumero">Número</string>
    <string name="sUrlEmpresaNueva">http://gooutapp.morethandev.es/php/EmpresaNuevo.php</string>
    <string name="sTipo">Tipo</string>
    <string name="slEventoEliminar">Eliminar evento</string>
    <string name="sEventoNombre">Introduzca el nombre del evento</string>
    <string name="sElijaCategoria">"Elija categoría"</string>
    <string name="sElijaClasificacion">"Elija clasificación"</string>
    <string name="sPrecio">"Precio del Evento"</string>
    <string name="sAlerta">Registrar alarma</string>
    <string name="sAlertaNombre">Título de la Alerta</string>
    <string name="sAlertaLugar">Lugar</string>
    <string name="sBuscarPorNombre">Nombre del usuario</string>
    <string name="sBuscarPorEmail">Email del usuario</string>
    <string name="sBloqueado">Bloquead@</string>
    <string name="sUrl_informeEventos">http://gooutapp.morethandev.es/php/selectInformeEventos.php</string>
    <string name="sTipoPenalizacion">Tipo de penalización: </string>
    <string name="sBuscarPorDatos">Buscar evento</string>
    <string name="sNombre">"Nombre de Usuario"</string>
    <string name="title_activity_usuario_nuevo">Selección de usuario</string>
    <string name="sActivo">Activ@</string>
    <string name="sActivado">Activado</string>
    <string name="sDesactivado">Desactivado</string>
    <string name="sConfirmaciones">Confirmaciones</string>
    <string name="sPenalizaciones">Penalizaciones</string>
    <string name="sRealizadas">Realizadas</string>
    <string name="sDenuncias">Denuncias</string>
    <string name="sRecibidas">Recibidas</string>
    <string name="sCargando">Realizando operación...</string>
    <string name="sConsultar">Consultar</string>
    <string name="sMusica">Música</string>
    <string name="sAudioVisual">Audiovisual</string>
    <string name="sEscena">Escena</string>
    <string name="sLiteratura">Literatura</string>
    <string name="sArte">Arte</string>
    <string name="sSocial">Social</string>
    <string name="sDeporte">Deporte</string>
    <string name="sJuegos">Juegos</string>
    <string name="title_activity_evento_">Evento</string>
    <string name="sEventosDenunciadosTipo3">Contenido ofensivo</string>
    <string name="sEventosConfirmados">Confirmados</string>
    <string name="sEventosDenunciadosTipo2">Evento inexistente</string>
    <string name="sEventosDenunciadosTipo1">Información errónea</string>
    <string name="sEventosDenunciados">Denunciados</string>
    <string name="sArtistasInvolucrados">"Artistas involucrados"</string>
    <string name="sTipoSala">Introduzca el nombre del lugar del evento</string>
    <string name="sUrl_selectPuntuaciones">http://gooutapp.morethandev.es/php/selectPuntuaciones.php</string>
    <string name="sUrl_selectEventos">http://gooutapp.morethandev.es/php/selectEventos.php</string>
    <string name="title_activity_evento_listado">List</string>
    <string name="title_activity_listado">Listado</string>
    <string name="title_activity_evento_seleccionado">Evento</string>
    <string name="sComenta">Añade un comentario</string>
    <string name="sComentario">Comentarios</string>
    <string name="sUrl_selectAllEventoSeleccionado">http://gooutapp.morethandev.es/php/selectAllEventoSeleccionado.php</string>
    <string name="sUrl_updatePuntuacionEvento">http://gooutapp.morethandev.es/php/updatePuntuacionEvento.php</string>
    <string name="sUrl_updateCampo">http://gooutapp.morethandev.es/php/updateCampo.php</string>
    <string name="sComoLlegar">Cómo llegar</string>
    <string name="sComentar">Comentar</string>
    <string name="sUrl_insertComentario">http://gooutapp.morethandev.es/php/insertComentario.php</string>
    <string name="title_activity_maps">Map</string>
    <string name="sDenuncia1">Evento no existente</string>
    <string name="sDenuncia2">"Contiene datos erróneos"</string>
    <string name="sDenuncia3">Contenido ofensivo</string>
    <string name="sDenunciaSeleccionado1">Evento no existente</string>
    <string name="sDenunciaSeleccionado3">Contenido ofensivo</string>
    <string name="title_activity_perfil_asistente">Asistente</string>
    <string name="sUrl_selectAllAsistente">http://gooutapp.morethandev.es/php/selectAllAsistente.php</string>
    <string name="sUrl_insertArtista">http://gooutapp.morethandev.es/php/insertArtista.php</string>
    <string name="sUrl_insertAsistente">"http://gooutapp.morethandev.es/php/insertAsistente.php"</string>
    <string name="sUrl_insertEmpresa">http://gooutapp.morethandev.es/php/insertEmpresa.php</string>
    <string name="sCodigoPostal">Código Postal</string>
    <string name="title_activity_perfil_artista">Artista</string>
    <string name="sUrl_selectAllArtista">http://gooutapp.morethandev.es/php/selectAllArtista.php</string>
    <string name="sLocalidad">Inserte la localidad</string>
    <string name="title_activity_perfil_empresa">Empresa</string>
    <string name="sUrl_updateAsistente">http://gooutapp.morethandev.es/php/updateAsistente.php</string>
    <string name="toggle_turn_on">ON</string>
    <string name="toggle_turn_off">OFF</string>
    <string name="sAddAlerta">Añadir alerta</string>
    <string name="sUrlInformeAlerta">http://gooutapp.morethandev.es/php/selectAllAlertaByIdUsuario.php</string>
    <string name="sIdEventoNombre">Título del evento</string>
    <string name="sNombreSala">Nombre de la Sala</string>
    <string name="nombreSala">nombreSala</string>
    <string name="sUrl_insertAlerta">http://gooutapp.morethandev.es/php/insertAlerta.php</string>
    <string name="sUrl_updateAlerta">http://gooutapp.morethandev.es/php/updateEstadoAlerta.php</string>
    <string name="title_activity_alerta_update">Actualizar alerta</string>
    <string name="sUrl_selectAllAlerta">http://gooutapp.morethandev.es/php/selectAllAlertaByIdAlerta.php</string>
    <string name="sUrl_selectAllEmpresa">http://gooutapp.morethandev.es/php/selectAllEmpresa.php</string>
    <string name="sUrl_updateEmpresa">http://gooutapp.morethandev.es/php/updateEmpresa.php</string>
    <string name="sUrl_updateArtista">http://gooutapp.morethandev.es/php/updateArtista.php</string>
    <string name="sUrl_selectAllEvento">http://gooutapp.morethandev.es/php/selectAllEvento.php</string>
    <string name="sMisEventos">Mis eventos</string>
    <string name="sCrearEvento">Crear evento</string>
    <string name="sUrl_insertEvento">http://gooutapp.morethandev.es/php/insertEvento.php</string>
    <string name="title_activity_usuario_listado">Listado de usuarios</string>
    <string name="sUrl_selectUsuariosPenalizados">http://gooutapp.morethandev.es/php/selectUsuariosByPenalizacion.php</string>
    <string name="title_activity_admin_usuario_consulta">Buscar Usuario</string>
    <string name="sUrl_selectUsuariobyNameOrByEmail">http://gooutapp.morethandev.es/php/selectUsuariobyNameOrByEmail.php</string>
    <string name="title_activity_admin_usuario_penalizar">Menú Penalizaciones</string>
    <string name="sUrl_selectPuntuacionesById">"http://gooutapp.morethandev.es/php/selectPuntuacionesById.php"</string>
    <string name="title_activity_tab_admin_evento_listado">Listado de Eventos</string>
    <string name="sUrl_selectEventosByPenalizacion">"http://gooutapp.morethandev.es/php/selectEventosByPenalizacion.php"</string>
    <string name="sEditar">Editar</string>
    <string name="sUrl_deleteEventoSeleccionado">"http://gooutapp.morethandev.es/php/deleteEvento.php"</string>
    <string name="title_activity_menu_ppal">Menú principal</string>
    <string name="sEvento">Evento</string>
    <string name="sUsuario">Usuario</string>
    <string name="sOnCreate">OnCreate</string>
    <string name="sDATOS">DATOS</string>
    <string name="sOnViewCreated">onViewCreated</string>
    <string name="sOnResume">onResume</string>
    <string name="sOnStop">onStop</string>
    <string name="sOnActivityResult">onActivityResult</string>
    <string name="sOnDestroy">onDestroy</string>
    <string name="sUrl_deleteComentario">http://gooutapp.morethandev.es/php/deleteComentario.php</string>
    <string name="title_activity_alerta">Alerta</string>
    <string name="sAlertaMenu">Crear alerta</string>
    <string name="sEliminar">Eliminar</string>
    <string name="font_name_source_amatic_regular">"AmorE-Regular.ttf"</string>
    <string name="sSonido">Sonido</string>
    <string name="sAcercaDe">Acerca de</string>
    <string name="sContatco">Contacto</string>
    <string name="sContacto">Datos del desarrollador</string>
    <string name="sLicencia">Licencia y términos de uso</string>
    <string name="sMenuIdioma">Idioma / language</string>
    <string name="sCamara">Añadir foto</string>
    <string name="Leyenda">Leyenda</string>
    <string name="recordar">Recordar</string>
    <string name="verTodos">Próximamente</string>
    <string name="share">Compartir con…</string>
</resources>