<!--
  ~ This file is part of FindAndGoApp.
  ~
  ~   FindAndGoApp is free software: you can redistribute it and/or modify
  ~   it under the terms of the GNU General Public License as published by
  ~   the Free Software Foundation, either version 3 of the License, or
  ~   (at your option) any later version.
  ~
  ~   FindAndGoApp is distributed in the hope that it will be useful,
  ~   but WITHOUT ANY WARRANTY; without even the implied warranty of
  ~   MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the
  ~   GNU General Public License for more details.
  ~
  ~   You should have received a copy of the GNU General Public License
  ~   along with Foobar.  If not, see <http://www.gnu.org/licenses/>.
  -->

<!--
  ~ This file is part of FindAndGoApp.
  ~
  ~   FindAndGoApp is free software: you can redistribute it and/or modify
  ~   it under the terms of the GNU General Public License as published by
  ~   the Free Software Foundation, either version 3 of the License, or
  ~   (at your option) any later version.
  ~
  ~   FindAndGoApp is distributed in the hope that it will be useful,
  ~   but WITHOUT ANY WARRANTY; without even the implied warranty of
  ~   MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the
  ~   GNU General Public License for more details.
  ~
  ~   You should have received a copy of the GNU General Public License
  ~   along with Foobar.  If not, see <http://www.gnu.org/licenses/>.
  -->

<!--
  ~ This file is part of FindAndGoApp.
  ~
  ~   FindAndGoApp is free software: you can redistribute it and/or modify
  ~   it under the terms of the GNU General Public License as published by
  ~   the Free Software Foundation, either version 3 of the License, or
  ~   (at your option) any later version.
  ~
  ~   FindAndGoApp is distributed in the hope that it will be useful,
  ~   but WITHOUT ANY WARRANTY; without even the implied warranty of
  ~   MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the
  ~   GNU General Public License for more details.
  ~
  ~   You should have received a copy of the GNU General Public License
  ~   along with Foobar.  If not, see <http://www.gnu.org/licenses/>.
  -->

<!--
  ~ This file is part of FindAndGoApp.
  ~
  ~   FindAndGoApp is free software: you can redistribute it and/or modify
  ~   it under the terms of the GNU General Public License as published by
  ~   the Free Software Foundation, either version 3 of the License, or
  ~   (at your option) any later version.
  ~
  ~   FindAndGoApp is distributed in the hope that it will be useful,
  ~   but WITHOUT ANY WARRANTY; without even the implied warranty of
  ~   MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the
  ~   GNU General Public License for more details.
  ~
  ~   You should have received a copy of the GNU General Public License
  ~   along with Foobar.  If not, see <http://www.gnu.org/licenses/>.
  -->

<!--
  ~ This file is part of FindAndGoApp.
  ~
  ~   FindAndGoApp is free software: you can redistribute it and/or modify
  ~   it under the terms of the GNU General Public License as published by
  ~   the Free Software Foundation, either version 3 of the License, or
  ~   (at your option) any later version.
  ~
  ~   FindAndGoApp is distributed in the hope that it will be useful,
  ~   but WITHOUT ANY WARRANTY; without even the implied warranty of
  ~   MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the
  ~   GNU General Public License for more details.
  ~
  ~   You should have received a copy of the GNU General Public License
  ~   along with Foobar.  If not, see <http://www.gnu.org/licenses/>.
  -->

<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content">


    <PreferenceCategory android:title="@string/action_settings">


        <com.findandgoapp.custom.CustomSwitchPreference
            android:defaultValue="true"
            android:icon="@drawable/ic_sound"
            android:key="idSwitchPreferences"
            android:selectable="true"
            android:summaryOff="@string/sDesactivado"
            android:summaryOn="@string/sActivado"
            android:title="@string/sSonido" />


    </PreferenceCategory>

    <PreferenceCategory android:title="@string/sAcercaDe">
        <EditTextPreference
            android:editable="false"
            android:icon="@drawable/ic_info_black_24dp"
            android:key="licencia"
            android:negativeButtonText=""
            android:summary="@string/sLicencia"
            android:title="@string/sAcercaDe"></EditTextPreference>

        <EditTextPreference
            android:editable="false"
            android:icon="@drawable/ic_contac_us"
            android:key="contacto"
            android:negativeButtonText=""
            android:summary="@string/sContacto"
            android:title="@string/sContatco"></EditTextPreference>

    </PreferenceCategory>

</PreferenceScreen>