<?xml version="1.0" encoding="utf-8"?><!--
  ~ This file is part of FindAndGoApp.
  ~
  ~   FindAndGoApp is free software: you can redistribute it and/or modify
  ~   it under the terms of the GNU General Public License as published by
  ~   the Free Software Foundation, either version 3 of the License, or
  ~   (at your option) any later version.
  ~
  ~   FindAndGoApp is distributed in the hope that it will be useful,
  ~   but WITHOUT ANY WARRANTY; without even the implied warranty of
  ~   MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the
  ~   GNU General Public License for more details.
  ~
  ~   You should have received a copy of the GNU General Public License
  ~   along with Foobar.  If not, see <http://www.gnu.org/licenses/>.
  -->

<!--
  ~ This file is part of FindAndGoApp.
  ~
  ~   FindAndGoApp is free software: you can redistribute it and/or modify
  ~   it under the terms of the GNU General Public License as published by
  ~   the Free Software Foundation, either version 3 of the License, or
  ~   (at your option) any later version.
  ~
  ~   FindAndGoApp is distributed in the hope that it will be useful,
  ~   but WITHOUT ANY WARRANTY; without even the implied warranty of
  ~   MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the
  ~   GNU General Public License for more details.
  ~
  ~   You should have received a copy of the GNU General Public License
  ~   along with Foobar.  If not, see <http://www.gnu.org/licenses/>.
  -->

<!--
  ~ This file is part of FindAndGoApp.
  ~
  ~   FindAndGoApp is free software: you can redistribute it and/or modify
  ~   it under the terms of the GNU General Public License as published by
  ~   the Free Software Foundation, either version 3 of the License, or
  ~   (at your option) any later version.
  ~
  ~   FindAndGoApp is distributed in the hope that it will be useful,
  ~   but WITHOUT ANY WARRANTY; without even the implied warranty of
  ~   MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the
  ~   GNU General Public License for more details.
  ~
  ~   You should have received a copy of the GNU General Public License
  ~   along with Foobar.  If not, see <http://www.gnu.org/licenses/>.
  -->

<android.support.v4.widget.NestedScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"

    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context=".MainActivity">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">


        <ImageView
            android:id="@+id/idIvLogo"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="@dimen/margen_izq"
            android:src="@drawable/ic_logo"
            android:contentDescription="@string/sMenuIdioma" />

        <android.support.design.widget.TextInputLayout
            android:id="@+id/til_nombre"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/idIvLogo"
            app:errorEnabled="true"

            >

            <com.findandgoapp.custom.CustomFontEditText
                app:font="@string/font_name_source_amatic_regular"
                android:id="@+id/idEtEmail"
                android:layout_width="280dp"
                android:layout_height="wrap_content"
                android:layout_centerHorizontal="true"
                android:layout_marginTop="@dimen/size_30"
                android:hint="@string/sEmail"
                android:textColorHint="@color/verdeAgua"
                android:inputType="textEmailAddress"
                android:textColor="@color/verdeAgua"
                android:textSize="@dimen/size_menu" />

        </android.support.design.widget.TextInputLayout>

        <android.support.design.widget.TextInputLayout
            android:id="@+id/til_password"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/til_nombre">

            <EditText

                android:id="@+id/idEtPassword"
                android:layout_width="280dp"
                android:layout_height="wrap_content"
                android:layout_centerHorizontal="true"
                android:layout_centerVertical="true"
                android:hint="@string/spassword"
                android:textColorHint="@color/verdeAgua"
                android:inputType="textPassword"
                android:layout_marginBottom="@dimen/size_5"
                android:textColor="@color/verdeAgua"
                android:textSize="@dimen/size_menu" />
        </android.support.design.widget.TextInputLayout>

        <com.findandgoapp.custom.CustomFontButton
            android:id="@+id/idBEnviar"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/sEnviar"
            app:font="@string/font_name_source_amatic_regular"
            style="@style/linked"
            android:background="@drawable/bordes_botones"
            android:layout_centerHorizontal="true"
            android:layout_centerVertical="true"
            android:layout_below="@id/til_password"
            android:layout_marginBottom="@dimen/size_5"
            android:textSize="@dimen/size_button" />


        <ImageView
            android:id="@+id/idIvSalir"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/ic_exit"
            android:layout_marginTop="@dimen/size_20"
            android:contentDescription="@string/sSalir"
            android:layout_alignParentEnd="true" />

        <CheckBox
            android:text="@string/recordar"
            android:textSize="@dimen/size_10"
            android:textColor="@color/verdeAgua"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/cbRecordar"
            android:saveEnabled="false"
            android:layout_below="@+id/til_password"
            android:layout_alignParentEnd="true" />

        <com.findandgoapp.custom.CustomFontButton
            android:id="@+id/idBOlvidoPassword"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/sOlvidoPassword"
            app:font="@string/font_name_source_amatic_regular"
            style="@style/linked"
            android:background="@drawable/bordes_botones"
            android:layout_marginStart="@dimen/size_5"
            android:layout_below="@+id/idBUsuarioNuevo"
            android:layout_alignParentEnd="true" />


        <com.google.android.gms.common.SignInButton
            android:id="@+id/sign_in_button"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/idBOlvidoPassword"
            android:layout_marginEnd="@dimen/size_5" />

        <com.facebook.login.widget.LoginButton

            android:id="@+id/login_button"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:font="@string/font_name_source_amatic_regular"
            android:layout_below="@+id/sign_in_button"
            android:layout_alignStart="@+id/idBUsuarioNuevo"

            android:layout_marginTop="@dimen/size_5" />

        <com.findandgoapp.custom.CustomFontButton
            android:id="@+id/idBUsuarioNuevo"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true"
            android:layout_below="@id/idBEnviar"
            android:text="@string/sUsuarioNuevo"
            app:font="@string/font_name_source_amatic_regular"
            style="@style/linked"
            android:background="@drawable/bordes_botones"
            android:layout_marginStart="@dimen/size_5"
            android:layout_marginBottom="@dimen/size_5"
            android:layout_alignParentRight="true"
            android:layout_alignParentEnd="true" />


    </RelativeLayout>


</android.support.v4.widget.NestedScrollView>